--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #dde6ed;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #526d82;
+  border-radius: 3px;
+}
